# nimformat

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark.py  build_pypi.sh  nimformat.nim  setup.cfg  setup.py  test_nimformat.py
nimformat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: nimformat.nim
