# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name             = nimformat
provides         = nimformat
description      = Faster keyword string substitution for Python
url              = https://github.com/UNIcodeX/nimformat#nimformat
download_url     = https://github.com/UNIcodeX/nimformat
author           = Jared Fields
author_email     = jbfields@protonmail.com
maintainer       = Jared Fields
maintainer_email = jbfields@protonmail.com
keywords         = string, strutils, python3, cpython, speed
license          = MIT
platforms        = Linux, Darwin, Windows
version          = 0.1.3
project_urls     =
    Docs = https://github.com/UNIcodeX/nimformat
    Bugs = https://github.com/UNIcodeX/nimformat/issues

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development


[options]
zip_safe = True
include_package_data = True
python_requires  = >3.5
packages         = find:

[bdist_wheel]
universal = 1

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = false

[options.package_data]
* = *.c, *.h, nimbase.h

[options.exclude_package_data]
* = *.py, *.nim, *.so, *.md, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md

[options.packages.find]
where   = .
include = *.c, *.h, nimbase.h
exclude = *.py, *.nim, *.so, *.dll, *.zip, *.js, *.tests, *.tests.*, tests.*, tests, README.md
